<resources>
    <string name="app_name">TrafficDensity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Camera</string>
    <string name="menu_slideshow">About Us</string>

    <string name="traffic_destiny">Traffic Destiny</string>
    <string name="search">Search</string>
<!--    <string name="camera_list">Camera List</string>-->
    <string name="location">Location</string>
    <string name="url">URL</string>
    <string name="_1">1.</string>
    <string name="vo_van_kiet_nguyen_tri_phuong">Vo Van Kiet - Nguyen Tri Phuong 1</string>
    <string name="vo_van_kiet_nguyen_tri_phuong2">Vo Van Kiet - Nguyen Tri Phuong 2</string>
    <string name="_2">2.</string>
    <string name="click_here">Click here</string>

    <string name="about_us_intro">Chúng tôi là Thành Lộc và Quang Thế, hai sinh viên năm cuối với niềm đam mê công nghệ và một mục tiêu chung: hoàn thành dự án tốt nghiệp này bằng tất cả tâm huyết. \'Traffic Density\' không chỉ là một ứng dụng, mà còn là kết quả của những đêm thức trắng, những dòng code miệt mài và vô số ly cà phê. Chúng tôi hy vọng sản phẩm này sẽ mang lại giá trị thực tiễn và thể hiện được nỗ lực của cả hai trong suốt chặng đường đại học. Cảm ơn bạn đã sử dụng ứng dụng!</string>
    <string name="our_team">Thành viên nhóm</string>
    <string name="member_name_1">Trần Lê Thành Lộc</string>
    <string name="member_name_2">Dương Quang Thế</string>
    <string name="contact_facebook">Liên hệ qua Facebook</string>
</resources>